report n portfolio names alignment issue in account search screen->fixed

--- a/qglobal-static/src/main/resources/css/qGlobal.css
+++ b/qglobal-static/src/main/resources/css/qGlobal.css
@@ -4555,3 +4555,14 @@ border:none;
 	font-size: 12px;
 	cursor: pointer;
 }
+#accountSearchRightPanel .formElementPair .select-many-checkbox label {
+	width: 230px !important;
+	word-wrap: break-word;
+	display: block;
+	float: left;
+}
+
+#accountSearchRightPanel .formElementPair .select-many-checkbox {
+	padding: 2px;
+	width: 251px !important;
+}
